@@ -1125,14 +1125,15 @@ class VerifyCommand(ConaryCommand):
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
     help = 'Verify software integrity on the system'
     docs = {'all' : 'verify all troves on system',
-            'changeset' : 'store the verify output in the named file' }
+            'changeset' : (VERBOSE_HELP,
+                           'store the verify output in the named file' ) }
     commandGroup = 'Information Display'
     ignoreConfigErrors = True
 
     def addParameters(self, argDef):
         ConaryCommand.addParameters(self, argDef)
         argDef["all"] = NO_PARAM
-        argDef["changesetPath"] = ONE_PARAM
+        argDef["changeset"] = ONE_PARAM
 
     def runCommand(self, cfg, argSet, otherArgs):
         db = openDatabase(cfg.root, cfg.dbPath)
